# course_work

./: .gitignore  C++_TOPICS_DEMONSTRATION.md  CMakeLists.txt  class_diagram.puml  course_project.pro  uml_diagram.puml
.cache/clangd/index/: AbstractProduct.cpp.ADF1C92BE21E1B00.idx  AbstractProduct.cpp.E0AFBC2759460EFB.idx  AbstractProduct.h.A64359231FF6191A.idx  AbstractProduct.h.D0D7B4695E3CBFF2.idx  ActionsDelegate.cpp.AF30A5BF159A77EA.idx  ActionsDelegate.cpp.E4D918EC4B1F8A58.idx  ActionsDelegate.h.5E8190EE78B3B756.idx  ActionsDelegate.h.F84FC267B713FB2E.idx  AddProductToOrderDialog.cpp.163A447C9E05A741.idx  AddProductToOrderDialog.cpp.F8EC8C412C2443DE.idx  AddProductToOrderDialog.h.457CF5E8B04E0932.idx  AddProductToOrderDialog.h.7470462A2631CD71.idx  DatabaseManager.cpp.CC88623926E432B2.idx  DatabaseManager.cpp.D4AD6979532A2515.idx  DatabaseManager.h.E5E21A6D4FEFCB66.idx  DatabaseManager.h.FF8EA90026C85212.idx  DiscountCalculator.h.E1E2344C55725282.idx  DiscountCalculator.h.E711FF0F9A9FF23B.idx  Exceptions.h.0A5333B959E38D94.idx  Exceptions.h.D901CFD8F943BFFB.idx  FileManager.cpp.BE1752261C20896E.idx  FileManager.cpp.DE3A730513D64F10.idx  FileManager.h.37EC4AF3FB4186A5.idx  FileManager.h.952ABD946B32DDB7.idx  FoodProduct.cpp.5AF24A26CFBCE3FB.idx  FoodProduct.cpp.7DFF9F8B6E965979.idx  FoodProduct.h.53EB8C9BCB818277.idx  FoodProduct.h.C620882E4E05B743.idx  InventoryDialog.cpp.52FABFB72459C7A5.idx  InventoryDialog.cpp.AB17A34BB99B2266.idx  InventoryDialog.h.112D0A57999EE0FD.idx  InventoryDialog.h.62040DBCBBB5C0E5.idx  InventoryManager.cpp.C1C84F57E5FEDD5D.idx  InventoryManager.h.0FED421CF8609811.idx  InventoryService.cpp.76F3AAB4EF5B2C85.idx  InventoryService.h.D9CCFA66F2707382.idx  MainWindow.cpp.16B2A9ADCD5E05F6.idx  MainWindow.cpp.A2742BE858CBD741.idx  MainWindow.h.521998D7AC0DAE93.idx  MainWindow.h.E64AFD5EB0701ACD.idx  (+48 more)
include/: AbstractProduct.h  ActionsDelegate.h  DatabaseManager.h  FileManager.h  FoodProduct.h  InventoryDialog.h  InventoryManager.h  MainWindow.h  NonFoodProduct.h  Product.h  ProductDialog.h  ProductModel.h  ProductRepository.h  ReportDialog.h  WriteOffCalculator.h  WriteOffDialog.h
include/entities/: AbstractProduct.h  Order.h  OrderItem.h  Product.h  ProductRepository.h  ProductRepository.tpp
include/exceptions/: Exceptions.h
include/managers/: DatabaseManager.h  FileManager.h
include/services/: DiscountCalculator.h  InventoryAdjustmentService.h  InventoryService.h  OrderService.h  ProductFilterService.h  ProductValidator.h  WriteOffCalculator.h  WriteOffService.h
include/ui/: MainWindow.h
include/ui/delegates/: ActionsDelegate.h
include/ui/dialogs/: AddProductToOrderDialog.h  InventoryDialog.h  OrderDialog.h  ProductDialog.h  ReportDialog.h  SalesReportDialog.h  WriteOffDialog.h
include/ui/models/: ProductModel.h
src/: AbstractProduct.cpp  ActionsDelegate.cpp  DatabaseManager.cpp  FileManager.cpp  FoodProduct.cpp  InventoryDialog.cpp  InventoryManager.cpp  MainWindow.cpp  NonFoodProduct.cpp  Product.cpp  ProductDialog.cpp  ProductModel.cpp  ProductRepository.cpp  ProductRepository.tpp  ReportDialog.cpp  WriteOffCalculator.cpp  WriteOffDialog.cpp  main.cpp
src/entities/: AbstractProduct.cpp  Order.cpp  Product.cpp  ProductRepository.tpp
src/managers/: DatabaseManager.cpp  FileManager.cpp
src/services/: InventoryAdjustmentService.cpp  InventoryService.cpp  OrderService.cpp  ProductFilterService.cpp  WriteOffCalculator.cpp  WriteOffService.cpp
src/ui/: MainWindow.cpp
src/ui/delegates/: ActionsDelegate.cpp
src/ui/dialogs/: AddProductToOrderDialog.cpp  InventoryDialog.cpp  OrderDialog.cpp  ProductDialog.cpp  ReportDialog.cpp  SalesReportDialog.cpp  WriteOffDialog.cpp
src/ui/models/: ProductModel.cpp
